src/objects/Income_And_Expense__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>IncomeAndExpenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>click_Applicant__c</referenceTo>
        <relationshipLabel>Income And Expenses</relationshipLabel>
        <relationshipName>Income_And_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_And_Liability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset And Liability</label>
        <referenceTo>Asset_And_Liability__c</referenceTo>
        <relationshipLabel>Income And Expenses</relationshipLabel>
        <relationshipName>Income_And_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Bonus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Allowance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overtime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic Living Expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Interest Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Time - PAYG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liability Expenses</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commenced__c</fullName>
        <label>Commenced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Copy_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Record</label>
        <referenceTo>Income_And_Expense__c</referenceTo>
        <relationshipLabel>Income And Expenses</relationshipLabel>
        <relationshipName>Income_And_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employment_Type__c</fullName>
        <formula>Applicant__r.acfEmployment_Type__c</formula>
        <label>Employment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortnightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Income_And_Expense_Detail__c</fullName>
        <label>Income And Expense Detail</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lendi_Application_uuid__c</fullName>
        <formula>Opportunity__r.Lendi_Application_uuid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lendi Application uuid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lendi_Income_And_Expense_uuid__c</fullName>
        <label>Lendi Income And Expense uuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lendi_User_uuid__c</fullName>
        <label>Lendi User uuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>IncomeAndExpenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfDetails__c</fullName>
        <label>Details</label>
        <picklist>
            <picklistValues>
                <fullName>Living Expenses</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Income And Expense</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Applicant__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Category__c</columns>
        <columns>Amount__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Employment_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INC-{0000}</displayFormat>
        <label>IncomeAndExpense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income And Expenses</pluralLabel>
    <recordTypes>
        <fullName>Expense</fullName>
        <active>true</active>
        <label>Expense</label>
    </recordTypes>
    <recordTypes>
        <fullName>Income</fullName>
        <active>true</active>
        <label>Income</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>